--- a/index.html
+++ b/index.html
@@ -618,10 +618,14 @@
         window.updateBt01('健康中国建设发展指数', 92.1);
         window.updateBt02('健康中国建设发展指数', 95.4);
         window.updateBt03('健康中国建设发展指数', 90.3);
+      } else if (year == '2023') {
+        window.updateBt01('健康中国建设发展指数', 100);
+        window.updateBt02('健康中国建设发展指数', 100);
+        window.updateBt03('健康中国建设发展指数', 100);
       } else {
-        window.updateBt01('健康中国建设发展指数', 71.2);
-        window.updateBt02('健康中国建设发展指数', 69.9);
-        window.updateBt03('健康中国建设发展指数', 73.4);
+        window.updateBt01('健康中国建设发展指数', 0);
+        window.updateBt02('健康中国建设发展指数', 0);
+        window.updateBt03('健康中国建设发展指数', 0);
       }
     }
 
@@ -879,37 +883,41 @@
       }
 
       if (year === '2016') {
-        window.updateBt01('健康中国建设发展指数', 71.2);
-        window.updateBt02('健康中国建设发展指数', 69.9);
-        window.updateBt03('健康中国建设发展指数', 73.4);
+        window.updateBt01('健康中国建设发展指数', 65.5);
+        window.updateBt02('健康中国建设发展指数', 68.3);
+        window.updateBt03('健康中国建设发展指数', 63.8);
       } else if (year === '2017') {
-        window.updateBt01('健康中国建设发展指数', 92.1);
-        window.updateBt02('健康中国建设发展指数', 95.4);
-        window.updateBt03('健康中国建设发展指数', 90.3);
+        window.updateBt01('健康中国建设发展指数', 70.2);
+        window.updateBt02('健康中国建设发展指数', 72.7);
+        window.updateBt03('健康中国建设发展指数', 67.9);
       } else if (year === '2018') {
-        window.updateBt01('健康中国建设发展指数', 92.1);
-        window.updateBt02('健康中国建设发展指数', 95.4);
-        window.updateBt03('健康中国建设发展指数', 90.3);
+        window.updateBt01('健康中国建设发展指数', 75.6);
+        window.updateBt02('健康中国建设发展指数', 77.8);
+        window.updateBt03('健康中国建设发展指数', 72.5);
       } else if (year === '2019') {
-        window.updateBt01('健康中国建设发展指数', 92.1);
-        window.updateBt02('健康中国建设发展指数', 95.4);
-        window.updateBt03('健康中国建设发展指数', 90.3);
+        window.updateBt01('健康中国建设发展指数', 80.5);
+        window.updateBt02('健康中国建设发展指数', 82.2);
+        window.updateBt03('健康中国建设发展指数', 77.4);
       } else if (year === '2020') {
-        window.updateBt01('健康中国建设发展指数', 92.1);
-        window.updateBt02('健康中国建设发展指数', 95.4);
-        window.updateBt03('健康中国建设发展指数', 90.3);
+        window.updateBt01('健康中国建设发展指数', 85.8);
+        window.updateBt02('健康中国建设发展指数', 87.3);
+        window.updateBt03('健康中国建设发展指数', 82.7);
       } else if (year === '2021') {
-        window.updateBt01('健康中国建设发展指数', 92.1);
-        window.updateBt02('健康中国建设发展指数', 95.4);
-        window.updateBt03('健康中国建设发展指数', 90.3);
+        window.updateBt01('健康中国建设发展指数', 91.2);
+        window.updateBt02('健康中国建设发展指数', 92.5);
+        window.updateBt03('健康中国建设发展指数', 87.9);
       } else if (year === '2022') {
-        window.updateBt01('健康中国建设发展指数', 92.1);
-        window.updateBt02('健康中国建设发展指数', 95.4);
-        window.updateBt03('健康中国建设发展指数', 90.3);
+        window.updateBt01('健康中国建设发展指数', 96.4);
+        window.updateBt02('健康中国建设发展指数', 97.6);
+        window.updateBt03('健康中国建设发展指数', 93.9);
+      } else if (year === '2023') {
+        window.updateBt01('健康中国建设发展指数', 100);
+        window.updateBt02('健康中国建设发展指数', 100);
+        window.updateBt03('健康中国建设发展指数', 100);
       } else {
-        window.updateBt01('健康中国建设发展指数', 71.2);
-        window.updateBt02('健康中国建设发展指数', 69.9);
-        window.updateBt03('健康中国建设发展指数', 73.4);
+        window.updateBt01('健康中国建设发展指数', 0);
+        window.updateBt02('健康中国建设发展指数', 0);
+        window.updateBt03('健康中国建设发展指数', 0);
       }
     }
 
