--- a/index.html
+++ b/index.html
@@ -603,29 +603,29 @@
       }
 
       if (year === '2019') {
-        window.updateBt01('健康中国建设发展指数', 71.2);
-        window.updateBt02('健康中国建设发展指数', 69.9);
-        window.updateBt03('健康中国建设发展指数', 73.4);
+        window.updateBt01('政策数量', 71.2);
+        window.updateBt02('政策质量', 69.9);
+        window.updateBt03('政策网络', 73.4);
       } else if (year === '2020') {
-        window.updateBt01('健康中国建设发展指数', 82.5);
-        window.updateBt02('健康中国建设发展指数', 78.3);
-        window.updateBt03('健康中国建设发展指数', 65.8);
+        window.updateBt01('政策数量', 82.5);
+        window.updateBt02('政策质量', 78.3);
+        window.updateBt03('政策网络', 65.8);
       } else if (year === '2021') {
-        window.updateBt01('健康中国建设发展指数', 88.6);
-        window.updateBt02('健康中国建设发展指数', 92.1);
-        window.updateBt03('健康中国建设发展指数', 85.7);
+        window.updateBt01('政策数量', 88.6);
+        window.updateBt02('政策质量', 92.1);
+        window.updateBt03('政策网络', 85.7);
       } else if (year === '2022') {
-        window.updateBt01('健康中国建设发展指数', 92.1);
-        window.updateBt02('健康中国建设发展指数', 95.4);
-        window.updateBt03('健康中国建设发展指数', 90.3);
+        window.updateBt01('政策数量', 92.1);
+        window.updateBt02('政策质量', 95.4);
+        window.updateBt03('政策网络', 90.3);
       } else if (year == '2023') {
-        window.updateBt01('健康中国建设发展指数', 100);
-        window.updateBt02('健康中国建设发展指数', 100);
-        window.updateBt03('健康中国建设发展指数', 100);
+        window.updateBt01('政策数量', 100);
+        window.updateBt02('政策质量', 100);
+        window.updateBt03('政策网络', 100);
       } else {
-        window.updateBt01('健康中国建设发展指数', 0);
-        window.updateBt02('健康中国建设发展指数', 0);
-        window.updateBt03('健康中国建设发展指数', 0);
+        window.updateBt01('政策数量', 0);
+        window.updateBt02('政策质量', 0);
+        window.updateBt03('政策网络', 0);
       }
     }
 
@@ -883,41 +883,41 @@
       }
 
       if (year === '2016') {
-        window.updateBt01('健康中国建设发展指数', 65.5);
-        window.updateBt02('健康中国建设发展指数', 68.3);
-        window.updateBt03('健康中国建设发展指数', 63.8);
+        window.updateBt01('政策数量', 65.5);
+        window.updateBt02('政策质量', 68.3);
+        window.updateBt03('政策网络', 63.8);
       } else if (year === '2017') {
-        window.updateBt01('健康中国建设发展指数', 70.2);
-        window.updateBt02('健康中国建设发展指数', 72.7);
-        window.updateBt03('健康中国建设发展指数', 67.9);
+        window.updateBt01('政策数量', 70.2);
+        window.updateBt02('政策质量', 72.7);
+        window.updateBt03('政策网络', 67.9);
       } else if (year === '2018') {
-        window.updateBt01('健康中国建设发展指数', 75.6);
-        window.updateBt02('健康中国建设发展指数', 77.8);
-        window.updateBt03('健康中国建设发展指数', 72.5);
+        window.updateBt01('政策数量', 75.6);
+        window.updateBt02('政策质量', 77.8);
+        window.updateBt03('政策网络', 72.5);
       } else if (year === '2019') {
-        window.updateBt01('健康中国建设发展指数', 80.5);
-        window.updateBt02('健康中国建设发展指数', 82.2);
-        window.updateBt03('健康中国建设发展指数', 77.4);
+        window.updateBt01('政策数量', 80.5);
+        window.updateBt02('政策质量', 82.2);
+        window.updateBt03('政策网络', 77.4);
       } else if (year === '2020') {
-        window.updateBt01('健康中国建设发展指数', 85.8);
-        window.updateBt02('健康中国建设发展指数', 87.3);
-        window.updateBt03('健康中国建设发展指数', 82.7);
+        window.updateBt01('政策数量', 85.8);
+        window.updateBt02('政策质量', 87.3);
+        window.updateBt03('政策网络', 82.7);
       } else if (year === '2021') {
-        window.updateBt01('健康中国建设发展指数', 91.2);
-        window.updateBt02('健康中国建设发展指数', 92.5);
-        window.updateBt03('健康中国建设发展指数', 87.9);
+        window.updateBt01('政策数量', 91.2);
+        window.updateBt02('政策质量', 92.5);
+        window.updateBt03('政策网络', 87.9);
       } else if (year === '2022') {
-        window.updateBt01('健康中国建设发展指数', 96.4);
-        window.updateBt02('健康中国建设发展指数', 97.6);
-        window.updateBt03('健康中国建设发展指数', 93.9);
+        window.updateBt01('政策数量', 96.4);
+        window.updateBt02('政策质量', 97.6);
+        window.updateBt03('政策网络', 93.9);
       } else if (year === '2023') {
-        window.updateBt01('健康中国建设发展指数', 100);
-        window.updateBt02('健康中国建设发展指数', 100);
-        window.updateBt03('健康中国建设发展指数', 100);
+        window.updateBt01('政策数量', 100);
+        window.updateBt02('政策质量', 100);
+        window.updateBt03('政策网络', 100);
       } else {
-        window.updateBt01('健康中国建设发展指数', 0);
-        window.updateBt02('健康中国建设发展指数', 0);
-        window.updateBt03('健康中国建设发展指数', 0);
+        window.updateBt01('政策数量', 0);
+        window.updateBt02('政策质量', 0);
+        window.updateBt03('政策网络', 0);
       }
     }
 
