data_fix bug-fixed

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
             <div class="bar">
               <div class="barbox" style="border: none;">
                 <ul class="clearfix" style="text-align: center;">
-                  <li style="float: none; display: inline-block;">省级维度</li>
+                  <li style="float: none; display: inline-block; font-size: 16px;">省级维度</li>
                 </ul>
               </div>
               <div class="barbox2" style="border: none;">
                 <ul class="clearfix" style="text-align: center;">
-                  <li style="float: none; display: inline-block;">中国地图</li>
+
                 </ul>
               </div>
             </div>
