--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       { "年份": "2020年", "健康中国建设发展测度指数": 71.8425803002, "政策数量": 93.0057470726, "政策质量": 73.8645356701, "政策网络": 57.8925584476, "防控重大疾病": 75, "全方位干预健康影响因素": 73, "维护全生命周期健康": 71, "当年完成率": 59.2760180995, "总体完成率": 80.5429864253, "平均完成月数": 11.191011236, "发文联合率": 30.303030303, "平均协作规模": 1.8917748918, "参与部门": 61 },
       { "年份": "2021年", "健康中国建设发展测度指数": 67.3875817514, "政策数量": 73.8936942405, "政策质量": 84.9304809287, "政策网络": 61.9930132046, "防控重大疾病": 43, "全方位干预健康影响因素": 67, "维护全生命周期健康": 83, "当年完成率": 65.1515151515, "总体完成率": 96.9696969697, "平均完成月数": 9.84375, "发文联合率": 29.8165137615, "平均协作规模": 2.1055045872, "参与部门": 63 },
       { "年份": "2022年", "健康中国建设发展测度指数": 68.0808548686, "政策数量": 75.4343704986, "政策质量": 92.5848505098, "政策网络": 62.1521907227, "防控重大疾病": 39, "全方位干预健康影响因素": 84, "维护全生命周期健康": 80, "当年完成率": 77.9411764706, "总体完成率": 92.6470588235, "平均完成月数": 6.9841269841, "发文联合率": 32.2033898305, "平均协作规模": 2.1610169492, "参与部门": 58 },
-      { "年份": "2023年", "健康中国建设发展测度指数": 81.5569409048, "政策数量": 81.9258155176, "政策质量": 97.3474325483, "政策网络": 77.4844711643, "防控重大疾病": 59, "方位干预健康影响因素": 68, "维护生命周期健康": 74, "当年完成率": 84.0579710145, "总体完成率": 92.7536231884, "平均完成月数": 4.890625, "发文联合率": 41.5637860082, "平均协作规模": 2.658436214, "参与部门": 62 }
+      { "年份": "2023年", "健康中国建设发展测度指数": 81.5569409048, "政策数量": 81.9258155176, "政策质量": 97.3474325483, "政策网络": 77.4844711643, "防控重大疾病": 59, "全方位干预健康影响因素": 68, "维护全生命周期健康": 74, "当年完成率": 84.0579710145, "总体完成率": 92.7536231884, "平均完成月数": 4.890625, "发文联合率": 41.5637860082, "平均协作规模": 2.658436214, "参与部门": 62 }
     ];
 
     // 页面加载完成后初始化
@@ -277,6 +277,7 @@
           formatter: function (params) {
             const year = params[0].name;
             const value = params[0].value;
+            const thisYearData = data.find(item => item["年份"] === year);
 
             // 更新全局变量
             window.currentCentralHoveredData = {
@@ -287,21 +288,21 @@
 
             // 更新评估指标
             if (type === '健康中国建设发展指数') {
-              window.updateBt01("政策数量", value);
-              window.updateBt02("政策质量", value);
-              window.updateBt03("政策网络", value);
+              window.updateBt01("政策数量", thisYearData["政策数量"]);
+              window.updateBt02("政策质量", thisYearData["政策质量"]);
+              window.updateBt03("政策网络", thisYearData["政策网络"]);
             } else if (type === '政策数量') {
-              window.updateBt01("全方位干预健康影响因素领域\n发文量（件）", value);
-              window.updateBt02("维护全生命周期健康领域\n发文量（件）", value);
-              window.updateBt03("防控重大疾病领域\n发文量（件）", value);
+              window.updateBt01("全方位干预健康影响因素领域\n发文量（件）", thisYearData["全方位干预健康影响因素"], 85);
+              window.updateBt02("维护全生命周期健康领域\n发文量（件）", thisYearData["维护全生命周期健康"], 84);
+              window.updateBt03("防控重大疾病领域\n发文量（件）", thisYearData["防控重大疾病"], 76);
             } else if (type === '政策质量') {
-              window.updateBt01("当年完成率（%）", value);
-              window.updateBt02("总体完成率（%）", value);
-              window.updateBt03("平均完成月数（月）", value);
+              window.updateBt01("当年完成率（%）", thisYearData["当年完成率"]);
+              window.updateBt02("总体完成率（%）", thisYearData["总体完成率"]);
+              window.updateBt03("平均完成月数（月）", thisYearData["平均完成月数"], 32);
             } else if (type === '政策网络') {
-              window.updateBt01("参与部门数量（家）", value);
-              window.updateBt02("平均协作规模（家/件）", value);
-              window.updateBt03("联合发文率（%）", value);
+              window.updateBt01("参与部门数量（家）", thisYearData["参与部门"], 64);
+              window.updateBt02("平均协作规模（家/件）", thisYearData["平均协作规模"], 3);
+              window.updateBt03("联合发文率（%）", thisYearData["发文联合率"]);
             } else {
               window.updateBt01(type, value);
               window.updateBt02(type, value);
