部门维度饼图完成

--- a/index.html
+++ b/index.html
@@ -459,66 +459,467 @@
 
     const departmentData = {
       '2019': [
-        { name: '国家卫生健康委员会', value: 46.91 },
-        { name: '国家市场监督管理总局', value: 26.94 },
-        { name: '人力资源和社会保障部', value: 26.74 },
-        { name: '科学技术部', value: 26.51 },
-        { name: '国务院扶贫开发领导小组办公室', value: 26.32 },
-        { name: '中华全国总工会', value: 26.31 },
-        { name: '海关总署', value: 26.23 },
-        { name: '财政部', value: 26.10 },
-        { name: '国家民族事务委员会', value: 26.05 },
-        { name: '住房和城乡建设部', value: 25.99 }
+        {
+          name: '国家卫生健康委员会',
+          value: 46.91,
+          yearData: {
+            "政策数量": 55.00,
+            "政策质量": 40.03,
+            "政策网络": 16.45
+          }
+        },
+        {
+          name: '国家市场监督管理总局',
+          value: 26.94,
+          yearData: {
+            "政策数量": 8.08,
+            "政策质量": 93.86,
+            "政策网络": 43.14
+          }
+        },
+        {
+          name: '人力资源和社会保障部',
+          value: 26.74,
+          yearData: {
+            "政策数量": 4.51,
+            "政策质量": 84.55,
+            "政策网络": 49.70
+          }
+        },
+        {
+          name: '科学技术部',
+          value: 26.51,
+          yearData: {
+            "政策数量": 2.82,
+            "政策质量": 83.94,
+            "政策网络": 49.56
+          }
+        },
+        {
+          name: '国务院扶贫开发领导小组办公室',
+          value: 26.32,
+          yearData: {
+            "政策数量": 1.82,
+            "政策质量": 83.63,
+            "政策网络": 48.42
+          }
+        },
+        {
+          name: '中华全国总工会',
+          value: 26.31,
+          yearData: {
+            "政策数量": 2.72,
+            "政策质量": 83.63,
+            "政策网络": 47.35
+          }
+        },
+        {
+          name: '海关总署',
+          value: 26.23,
+          yearData: {
+            "政策数量": 0.36,
+            "政策质量": 13.91,
+            "政策网络": 55.53
+          }
+        },
+        {
+          name: '财政部',
+          value: 26.10,
+          yearData: {
+            "政策数量": 6.68,
+            "政策质量": 53.09,
+            "政策网络": 51.20
+          }
+        },
+        {
+          name: '国家民族事务委员会',
+          value: 26.05,
+          yearData: {
+            "政策数量": 0.16,
+            "政策质量": 84.25,
+            "政策网络": 48.85
+          }
+        },
+        {
+          name: '住房和城乡建设部',
+          value: 25.99,
+          yearData: {
+            "政策数量": 0.91,
+            "政策质量": 21.59,
+            "政策网络": 61.17
+          }
+        }
       ],
       '2020': [
-        { name: '国家卫生健康委员会', value: 54.14 },
-        { name: '中央宣传部', value: 28.84 },
-        { name: '国家信访局', value: 28.65 },
-        { name: '中央网络安全和信息化委员会办', value: 27.32 },
-        { name: '财政部', value: 27.05 },
-        { name: '公安部', value: 26.92 },
-        { name: '中央政法委员会', value: 26.92 },
-        { name: '国务院扶贫开发领导小组办公室', value: 26.91 },
-        { name: '民政部', value: 26.61 },
-        { name: '司法部', value: 26.54 }
+        {
+          name: '国家卫生健康委员会',
+          value: 54.14,
+          yearData: {
+            "政策数量": 66.85,
+            "政策质量": 53.31,
+            "政策网络": 14.36
+          }
+        },
+        {
+          name: '中央宣传部',
+          value: 28.84,
+          yearData: {
+            "政策数量": 1.44,
+            "政策质量": 76.21,
+            "政策网络": 64.19
+          }
+        },
+        {
+          name: '国家信访局',
+          value: 28.65,
+          yearData: {
+            "政策数量": 0.36,
+            "政策质量": 85.17,
+            "政策网络": 61.24
+          }
+        },
+        {
+          name: '中央网络安全和信息化委员会办',
+          value: 27.32,
+          yearData: {
+            "政策数量": 0.64,
+            "政策质量": 82.89,
+            "政策网络": 56.22
+          }
+        },
+        {
+          name: '财政部',
+          value: 27.05,
+          yearData: {
+            "政策数量": 6.40,
+            "政策质量": 85.17,
+            "政策网络": 45.71
+          }
+        },
+        {
+          name: '公安部',
+          value: 26.92,
+          yearData: {
+            "政策数量": 3.82,
+            "政策质量": 83.94,
+            "政策网络": 49.23
+          }
+        },
+        {
+          name: '中央政法委员会',
+          value: 26.92,
+          yearData: {
+            "政策数量": 0.35,
+            "政策质量": 83.94,
+            "政策网络": 54.06
+          }
+        },
+        {
+          name: '国务院扶贫开发领导小组办公室',
+          value: 26.91,
+          yearData: {
+            "政策数量": 0.79,
+            "政策质量": 85.17,
+            "政策网络": 52.82
+          }
+        },
+        {
+          name: '民政部',
+          value: 26.61,
+          yearData: {
+            "政策数量": 10.77,
+            "政策质量": 83.35,
+            "政策网络": 38.74
+          }
+        },
+        {
+          name: '司法部',
+          value: 26.54,
+          yearData: {
+            "政策数量": 1.13,
+            "政策质量": 71.10,
+            "政策网络": 56.56
+          }
+        }
       ],
       '2021': [
-        { name: '国家卫生健康委员会', value: 52.98 },
-        { name: '中华全国总工会', value: 28.36 },
-        { name: '人力资源和社会保障部', value: 27.72 },
-        { name: '财政部', value: 27.53 },
-        { name: '科学技术部', value: 27.23 },
-        { name: '中央政法委员会', value: 27.06 },
-        { name: '中华全国妇女联合会', value: 27.01 },
-        { name: '中央宣传部', value: 26.68 },
-        { name: '民政部', value: 26.50 },
-        { name: '住房和城乡建设部', value: 26.26 }
+        {
+          name: '国家卫生健康委员会',
+          value: 52.98,
+          yearData: {
+            "政策数量": 63.90,
+            "政策质量": 59.85,
+            "政策网络": 15.11
+          }
+        },
+        {
+          name: '中华全国总工会',
+          value: 28.36,
+          yearData: {
+            "政策数量": 2.97,
+            "政策质量": 85.17,
+            "政策网络": 54.75
+          }
+        },
+        {
+          name: '人力资源和社会保障部',
+          value: 27.72,
+          yearData: {
+            "政策数量": 4.85,
+            "政策质量": 85.17,
+            "政策网络": 52.14
+          }
+        },
+        {
+          name: '财政部',
+          value: 27.53,
+          yearData: {
+            "政策数量": 7.82,
+            "政策质量": 85.17,
+            "政策网络": 46.23
+          }
+        },
+        {
+          name: '科学技术部',
+          value: 27.23,
+          yearData: {
+            "政策数量": 1.20,
+            "政策质量": 84.55,
+            "政策网络": 52.87
+          }
+        },
+        {
+          name: '中央政法委员会',
+          value: 27.06,
+          yearData: {
+            "政策数量": 0.92,
+            "政策质量": 85.17,
+            "政策网络": 53.68
+          }
+        },
+        {
+          name: '中华全国妇女联合会',
+          value: 27.01,
+          yearData: {
+            "政策数量": 2.40,
+            "政策质量": 84.25,
+            "政策网络": 51.71
+          }
+        },
+        {
+          name: '中央宣传部',
+          value: 26.68,
+          yearData: {
+            "政策数量": 3.01,
+            "政策质量": 57.42,
+            "政策网络": 57.24
+          }
+        },
+        {
+          name: '民政部',
+          value: 26.50,
+          yearData: {
+            "政策数量": 10.66,
+            "政策质量": 85.07,
+            "政策网络": 37.94
+          }
+        },
+        {
+          name: '住房和城乡建设部',
+          value: 26.26,
+          yearData: {
+            "政策数量": 3.64,
+            "政策质量": 83.33,
+            "政策网络": 49.40
+          }
+        }
       ],
       '2022': [
-        { name: '国家卫生健康委员会', value: 52.67 },
-        { name: '中央政法委员会', value: 32.92 },
-        { name: '中央宣传部', value: 29.60 },
-        { name: '中国民用航空局', value: 28.88 },
-        { name: '国家铁路局', value: 28.70 },
-        { name: '国家广播电视总局', value: 28.19 },
-        { name: '工业和信息化部', value: 27.73 },
-        { name: '交通运输部', value: 27.52 },
-        { name: '文化和旅游部', value: 27.09 },
-        { name: '中华全国妇女联合会', value: 26.92 }
+        {
+          name: '国家卫生健康委员会',
+          value: 52.67,
+          yearData: {
+            "政策数量": 62.12,
+            "政策质量": 69.48,
+            "政策网络": 17.11
+          }
+        },
+        {
+          name: '中央政法委员会',
+          value: 32.92,
+          yearData: {
+            "政策数量": 0.00,
+            "政策质量": 85.78,
+            "政策网络": 82.22
+          }
+        },
+        {
+          name: '中央宣传部',
+          value: 29.60,
+          yearData: {
+            "政策数量": 1.15,
+            "政策质量": 84.34,
+            "政策网络": 67.19
+          }
+        },
+        {
+          name: '中国民用航空局',
+          value: 28.88,
+          yearData: {
+            "政策数量": 0.80,
+            "政策质量": 84.25,
+            "政策网络": 64.14
+          }
+        },
+        {
+          name: '国家铁路局',
+          value: 28.70,
+          yearData: {
+            "政策数量": 0.56,
+            "政策质量": 84.25,
+            "政策网络": 63.69
+          }
+        },
+        {
+          name: '国家广播电视总局',
+          value: 28.19,
+          yearData: {
+            "政策数量": 3.14,
+            "政策质量": 84.25,
+            "政策网络": 59.04
+          }
+        },
+        {
+          name: '工业和信息化部',
+          value: 27.73,
+          yearData: {
+            "政策数量": 4.45,
+            "政策质量": 85.32,
+            "政策网络": 53.53
+          }
+        },
+        {
+          name: '交通运输部',
+          value: 27.52,
+          yearData: {
+            "政策数量": 1.68,
+            "政策质量": 84.25,
+            "政策网络": 57.54
+          }
+        },
+        {
+          name: '文化和旅游部',
+          value: 27.09,
+          yearData: {
+            "政策数量": 2.15,
+            "政策质量": 84.25,
+            "政策网络": 53.96
+          }
+        },
+        {
+          name: '中华全国妇女联合会',
+          value: 26.92,
+          yearData: {
+            "政策数量": 1.95,
+            "政策质量": 83.79,
+            "政策网络": 55.79
+          }
+        }
       ],
       '2023': [
-        { name: '国家卫生健康委员会', value: 69.75 },
-        { name: '国家铁路局', value: 31.16 },
-        { name: '中国国家铁路集团有限公司', value: 31.16 },
-        { name: '中国民用航空局', value: 31.11 },
-        { name: '民政部', value: 29.47 },
-        { name: '中央宣传部', value: 28.85 },
-        { name: '教育部', value: 28.74 },
-        { name: '科学技术部', value: 28.52 },
-        { name: '中华全国总工会', value: 28.14 },
-        { name: '交通运输部', value: 28.06 }
+        {
+          name: '国家卫生健康委员会',
+          value: 69.75,
+          yearData: {
+            "政策数量": 100.00,
+            "政策质量": 76.33,
+            "政策网络": 17.88
+          }
+        },
+        {
+          name: '国家铁路局',
+          value: 31.16,
+          yearData: {
+            "政策数量": 0.16,
+            "政策质量": 84.86,
+            "政策网络": 75.28
+          }
+        },
+        {
+          name: '中国国家铁路集团有限公司',
+          value: 31.16,
+          yearData: {
+            "政策数量": 0.16,
+            "政策质量": 84.86,
+            "政策网络": 75.28
+          }
+        },
+        {
+          name: '中国民用航空局',
+          value: 31.11,
+          yearData: {
+            "政策数量": 0.27,
+            "政策质量": 84.86,
+            "政策网络": 74.87
+          }
+        },
+        {
+          name: '民政部',
+          value: 29.47,
+          yearData: {
+            "政策数量": 14.61,
+            "政策质量": 84.48,
+            "政策网络": 45.17
+          }
+        },
+        {
+          name: '中央宣传部',
+          value: 28.85,
+          yearData: {
+            "政策数量": 1.86,
+            "政策质量": 84.86,
+            "政策网络": 59.60
+          }
+        },
+        {
+          name: '教育部',
+          value: 28.74,
+          yearData: {
+            "政策数量": 20.10,
+            "政策质量": 78.27,
+            "政策网络": 34.49
+          }
+        },
+        {
+          name: '科学技术部',
+          value: 28.52,
+          yearData: {
+            "政策数量": 6.63,
+            "政策质量": 84.86,
+            "政策网络": 54.58
+          }
+        },
+        {
+          name: '中华全国总工会',
+          value: 28.14,
+          yearData: {
+            "政策数量": 4.94,
+            "政策质量": 84.25,
+            "政策网络": 52.36
+          }
+        },
+        {
+          name: '交通运输部',
+          value: 28.06,
+          yearData: {
+            "政策数量": 2.03,
+            "政策质量": 84.86,
+            "政策网络": 57.62
+          }
+        }
       ]
     };
+
 
     // 页面加载完成后初始化
     $(document).ready(function () {
@@ -551,6 +952,10 @@
         tooltip: {
           show: true,
           formatter: function (params) {
+            const yearData = departmentData[year].find(item => item.name === params.name).yearData;
+            window.updateBt01('政策数量', yearData["政策数量"]);
+            window.updateBt02('政策质量', yearData["政策质量"]);
+            window.updateBt03('政策网络', yearData["政策网络"]);
             if (params.name == '国务院扶贫开发领导小组办公室') {
               return '国务院扶贫开发<br/>领导小组办公室<br/>' + params.seriesName + ':' + params.value.toFixed(2)
             }
@@ -633,31 +1038,9 @@
         departmentChart.setOption(getDepartmentOption(year));
       }
 
-      if (year === '2019') {
-        window.updateBt01('政策数量', 71.2);
-        window.updateBt02('政策质量', 69.9);
-        window.updateBt03('政策网络', 73.4);
-      } else if (year === '2020') {
-        window.updateBt01('政策数量', 82.5);
-        window.updateBt02('政策质量', 78.3);
-        window.updateBt03('政策网络', 65.8);
-      } else if (year === '2021') {
-        window.updateBt01('政策数量', 88.6);
-        window.updateBt02('政策质量', 92.1);
-        window.updateBt03('政策网络', 85.7);
-      } else if (year === '2022') {
-        window.updateBt01('政策数量', 92.1);
-        window.updateBt02('政策质量', 95.4);
-        window.updateBt03('政策网络', 90.3);
-      } else if (year == '2023') {
-        window.updateBt01('政策数量', 100);
-        window.updateBt02('政策质量', 100);
-        window.updateBt03('政策网络', 100);
-      } else {
-        window.updateBt01('政策数量', 0);
-        window.updateBt02('政策质量', 0);
-        window.updateBt03('政策网络', 0);
-      }
+      window.updateBt01('政策数量', 0);
+      window.updateBt02('政策质量', 0);
+      window.updateBt03('政策网络', 0);
     }
 
     // 将函数暴露到全局作用域
@@ -912,44 +1295,9 @@
         actionChart.clear();
         actionChart.setOption(getActionOption(year));
       }
-
-      if (year === '2016') {
-        window.updateBt01('政策数量', 65.5);
-        window.updateBt02('政策质量', 68.3);
-        window.updateBt03('政策网络', 63.8);
-      } else if (year === '2017') {
-        window.updateBt01('政策数量', 70.2);
-        window.updateBt02('政策质量', 72.7);
-        window.updateBt03('政策网络', 67.9);
-      } else if (year === '2018') {
-        window.updateBt01('政策数量', 75.6);
-        window.updateBt02('政策质量', 77.8);
-        window.updateBt03('政策网络', 72.5);
-      } else if (year === '2019') {
-        window.updateBt01('政策数量', 80.5);
-        window.updateBt02('政策质量', 82.2);
-        window.updateBt03('政策网络', 77.4);
-      } else if (year === '2020') {
-        window.updateBt01('政策数量', 85.8);
-        window.updateBt02('政策质量', 87.3);
-        window.updateBt03('政策网络', 82.7);
-      } else if (year === '2021') {
-        window.updateBt01('政策数量', 91.2);
-        window.updateBt02('政策质量', 92.5);
-        window.updateBt03('政策网络', 87.9);
-      } else if (year === '2022') {
-        window.updateBt01('政策数量', 96.4);
-        window.updateBt02('政策质量', 97.6);
-        window.updateBt03('政策网络', 93.9);
-      } else if (year === '2023') {
-        window.updateBt01('政策数量', 100);
-        window.updateBt02('政策质量', 100);
-        window.updateBt03('政策网络', 100);
-      } else {
-        window.updateBt01('政策数量', 0);
-        window.updateBt02('政策质量', 0);
-        window.updateBt03('政策网络', 0);
-      }
+      window.updateBt01('政策数量', 0);
+      window.updateBt02('政策质量', 0);
+      window.updateBt03('政策网络', 0);
     }
 
     // 将函数暴露到全局作用域
